--- a/ndrf/package.json
+++ b/ndrf/package.json
@@ -12,11 +12,13 @@
     "@coreui/coreui": "^4.2.1",
     "@coreui/react": "^4.3.1",
     "@egjs/react-grid": "^1.12.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
