--- a/razorpay-backend/package.json
+++ b/razorpay-backend/package.json
@@ -1,22 +1,19 @@
 {
-    "name": "razorpay-backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "server": "nodemon server.js",
-        "client": "npm run start --prefix client",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "cors": "^2.8.5",
-        "crypto": "^1.0.1",
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1",
-        "mongoose": "^6.5.2",
-        "nodemon": "^2.0.19",
-        "razorpay": "^2.8.3"
-    }
+  "name": "razorpay-payment-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "razorpay": "^2.0.6",
+    "shortid": "^2.2.15"
+  }
 }
