--- a/ndrf/package.json
+++ b/ndrf/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "json-server": "^0.17.0",
+    "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.2",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
