--- a/ndrf/package.json
+++ b/ndrf/package.json
@@ -14,9 +14,11 @@
     "@egjs/react-grid": "^1.12.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
     "json-server": "^0.17.0",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.2",
     "react-router-dom": "^6.3.0",
