--- a/ndrf/package.json
+++ b/ndrf/package.json
@@ -26,7 +26,8 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "web3.storage": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
