--- a/ndrf/package.json
+++ b/ndrf/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "ethers": "^5.7.0",
     "json-server": "^0.17.0",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
